--- a/weatherOrNot/Storyboards/Settings.storyboard
+++ b/weatherOrNot/Storyboards/Settings.storyboard
@@ -9,20 +9,20 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Settings-->
         <scene sceneID="tWn-EE-omZ">
             <objects>
-                <tableViewController id="62f-Zp-4rh" sceneMemberID="viewController">
+                <tableViewController id="62f-Zp-4rh" customClass="SettingsTVController" customModule="weatherOrNot" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="U6k-dg-mxK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="756"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="gjs-Co-gUc">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="settingsCell" rowHeight="250" id="gjs-Co-gUc">
+                                <rect key="frame" x="0.0" y="28" width="414" height="250"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gjs-Co-gUc" id="Ey9-vm-ety">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="249.66666666666666"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -32,7 +32,7 @@
                             <outlet property="delegate" destination="62f-Zp-4rh" id="IWD-Bi-o3P"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="0Iv-Dl-ypT"/>
+                    <navigationItem key="navigationItem" title="Settings" id="0Iv-Dl-ypT"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TpL-yd-NEu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -60,6 +60,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="TabBar_Settings" width="75" height="75"/>
+        <image name="TabBar_Settings" width="18.75" height="18.75"/>
     </resources>
 </document>
