--- a/weatherOrNot/Storyboards/Settings.storyboard
+++ b/weatherOrNot/Storyboards/Settings.storyboard
@@ -1,62 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Cha-2E-Kxh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2sA-fT-d9x">
     <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Settings-->
-        <scene sceneID="tWn-EE-omZ">
+        <scene sceneID="d2c-jU-uzW">
             <objects>
-                <tableViewController id="62f-Zp-4rh" customClass="SettingsTVController" customModule="weatherOrNot" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="U6k-dg-mxK">
+                <viewController id="soH-Y1-aVa" customClass="SettingsVController" customModule="weatherOrNot" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sw4-Tl-oEV">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="756"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Light Mode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSF-1X-ovP">
+                                <rect key="frame" x="20" y="20" width="90" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wcV-DD-iNk">
+                                <rect key="frame" x="345" y="20" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="switchTapped:" destination="soH-Y1-aVa" eventType="valueChanged" id="sqd-yL-iXs"/>
+                                </connections>
+                            </switch>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bk2-i9-FNi">
+                                <rect key="frame" x="57" y="333" width="300" height="90"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="settingsCell" rowHeight="250" id="gjs-Co-gUc">
-                                <rect key="frame" x="0.0" y="28" width="414" height="250"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gjs-Co-gUc" id="Ey9-vm-ety">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="249.66666666666666"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="62f-Zp-4rh" id="svq-ce-Spa"/>
-                            <outlet property="delegate" destination="62f-Zp-4rh" id="IWD-Bi-o3P"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Settings" id="0Iv-Dl-ypT"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TpL-yd-NEu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <viewLayoutGuide key="safeArea" id="Kih-Au-oIw"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Settings" id="tMo-ro-Bhg"/>
+                    <connections>
+                        <outlet property="darkModeLabel" destination="zSF-1X-ovP" id="DVk-dH-K94"/>
+                        <outlet property="lightToDarkSwitcher" destination="wcV-DD-iNk" id="Z4b-Rj-DzW"/>
+                        <outlet property="signatureImage" destination="bk2-i9-FNi" id="Vis-wu-UMu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jn3-78-C37" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1915.9420289855075" y="-194.19642857142856"/>
+            <point key="canvasLocation" x="2866.666666666667" y="-78.348214285714278"/>
         </scene>
         <!--Settings-->
-        <scene sceneID="oJc-Lx-ILH">
+        <scene sceneID="Dth-ZV-cLv">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Cha-2E-Kxh" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Settings" image="TabBar_Settings" id="GR2-AD-ivO"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2sA-fT-d9x" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Settings" image="TabBar_Settings" id="miq-Aa-hc6"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" largeTitles="YES" id="nVa-KZ-Cuv">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" largeTitles="YES" id="pC9-Nt-xxd">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="62f-Zp-4rh" kind="relationship" relationship="rootViewController" id="xU8-Ed-okz"/>
+                        <segue destination="soH-Y1-aVa" kind="relationship" relationship="rootViewController" id="3xM-40-MER"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vEA-vF-GYG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jff-6v-7CP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1005.7971014492755" y="-194.19642857142856"/>
+            <point key="canvasLocation" x="1956.521739130435" y="-78.348214285714278"/>
         </scene>
     </scenes>
     <resources>
